src/transform/gcx/query_parser.output
State 54 conflicts: 3 shift/reduce
State 61 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Query

    2 Query: /* empty */
    3      | XMLExpr

    4 StartTag: RELOP_LT QName RELOP_GT

    5 EndTag: LTSLASH QName RELOP_GT

    6 BachelorTag: RELOP_LT QName GTSLASH

    7 XMLExpr: StartTag NestedXMLExpr EndTag
    8        | BachelorTag
    9        | StartTag EndTag

   10 NestedXMLExpr: CBOPEN QExpr CBCLOSE
   11              | ElementContents
   12              | XMLExpr
   13              | NestedXMLExpr NestedXMLExpr

   14 ElementContents: ELEMENTCONTENT

   15 QExpr: ReturnQExpr
   16      | QExpr COMMA QExpr

   17 QExprSingle: ConstString
   18            | FWRExpr
   19            | IfExpr
   20            | VarExpr
   21            | AggregateFunct
   22            | NestedXMLExpr

   23 ConstString: CONSTSTRING

   24 FWRExpr: ForClause XRETURN ReturnQExpr
   25        | ForClause WhereClause XRETURN ReturnQExpr

   26 ReturnQExpr: QExprSingle
   27            | BOPEN QExpr BCLOSE
   28            | BOPEN BCLOSE

   29 ForClause: FOR VarRef IN VarExpr ExprAppendix

   30 WhereClause: WHERE Condition

   31 Condition: XTRUE
   32          | XFALSE
   33          | EXISTS BOPEN VarExpr BCLOSE
   34          | BOPEN Condition BCLOSE
   35          | ComparisonExpr
   36          | NOT Condition
   37          | Condition AND Condition
   38          | Condition OR Condition

   39 ComparisonExpr: OperandExpr RelOp OperandExpr

   40 OperandExpr: VarExpr
   41            | AggregateFunct
   42            | CONSTSTRING

   43 ExprAppendix: /* empty */
   44             | COMMA VarRef IN VarExpr ExprAppendix

   45 RelOp: RELOP_EQ
   46      | RELOP_LT
   47      | RELOP_GT
   48      | RELOP_GEQ
   49      | RELOP_LEQ
   50      | RELOP_NEQ

   51 AggregateFunct: SUM BOPEN VarExpr BCLOSE
   52               | AVG BOPEN VarExpr BCLOSE
   53               | MIN BOPEN VarExpr BCLOSE
   54               | MAX BOPEN VarExpr BCLOSE
   55               | COUNT BOPEN VarExpr BCLOSE
   56               | STDDEV_SAMP BOPEN VarExpr BCLOSE
   57               | STDDEV_POP BOPEN VarExpr BCLOSE
   58               | VAR_SAMP BOPEN VarExpr BCLOSE
   59               | VAR_POP BOPEN VarExpr BCLOSE
   60               | LIST BOPEN VarExpr BCLOSE

   61 PathStepExpr: ChildAxis NodeTest
   62             | DescendantAxis NodeTest
   63             | PathStepExpr ChildAxis NodeTest
   64             | PathStepExpr DescendantAxis NodeTest

   65 ChildAxis: SLASH
   66          | SLASH CHILD

   67 DescendantAxis: DSLASH
   68               | SLASH DESCENDANT

   69 NodeTest: XP_NODE
   70         | XP_TEXT
   71         | NT_STAR
   72         | QName

   73 QName: QNAME

   74 PathExpr: PathStepExpr

   75 IfExpr: IF BOPEN Condition BCLOSE THEN ReturnQExpr ELSE ReturnQExpr

   76 VarExpr: BOPEN SLASH BCLOSE
   77        | SLASH
   78        | VarRef
   79        | VarAxisExpr

   80 VarRef: VAR_SIGN VARNAME

   81 VarAxisExpr: VarRef PathExpr
   82            | PathExpr


Terminals, with rules where they appear

$end (0) 0
error (256)
OR (258) 38
AND (259) 37
NOT (260) 36
SLASH (261) 65 66 68 76 77
DSLASH (262) 67
NT_STAR (263) 71
EXISTS (264) 33
XTRUE (265) 31
XFALSE (266) 32
CHILD (267) 66
DESCENDANT (268) 68
FOR (269) 29
IN (270) 29 44
XRETURN (271) 24 25
IF (272) 75
THEN (273) 75
ELSE (274) 75
WHERE (275) 30
RELOP_LT (276) 4 6 46
RELOP_LEQ (277) 49
RELOP_EQ (278) 45
RELOP_GT (279) 4 5 47
RELOP_GEQ (280) 48
RELOP_NEQ (281) 50
VAR_SIGN (282) 80
LTSLASH (283) 5
GTSLASH (284) 6
CONSTSTRING (285) 23 42
QNAME (286) 73
VARNAME (287) 80
COMMA (288) 16 44
CBOPEN (289) 10
CBCLOSE (290) 10
BOPEN (291) 27 28 33 34 51 52 53 54 55 56 57 58 59 60 75 76
BCLOSE (292) 27 28 33 34 51 52 53 54 55 56 57 58 59 60 75 76
ELEMENTCONTENT (293) 14
XP_TEXT (294) 70
XP_NODE (295) 69
SUM (296) 51
AVG (297) 52
MIN (298) 53
MAX (299) 54
COUNT (300) 55
STDDEV_SAMP (301) 56
STDDEV_POP (302) 57
VAR_SAMP (303) 58
VAR_POP (304) 59
LIST (305) 60


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
start (52)
    on left: 1, on right: 0
Query (53)
    on left: 2 3, on right: 1
StartTag (54)
    on left: 4, on right: 7 9
EndTag (55)
    on left: 5, on right: 7 9
BachelorTag (56)
    on left: 6, on right: 8
XMLExpr (57)
    on left: 7 8 9, on right: 3 12
NestedXMLExpr (58)
    on left: 10 11 12 13, on right: 7 13 22
ElementContents (59)
    on left: 14, on right: 11
QExpr (60)
    on left: 15 16, on right: 10 16 27
QExprSingle (61)
    on left: 17 18 19 20 21 22, on right: 26
ConstString (62)
    on left: 23, on right: 17
FWRExpr (63)
    on left: 24 25, on right: 18
ReturnQExpr (64)
    on left: 26 27 28, on right: 15 24 25 75
ForClause (65)
    on left: 29, on right: 24 25
WhereClause (66)
    on left: 30, on right: 25
Condition (67)
    on left: 31 32 33 34 35 36 37 38, on right: 30 34 36 37 38 75
ComparisonExpr (68)
    on left: 39, on right: 35
OperandExpr (69)
    on left: 40 41 42, on right: 39
ExprAppendix (70)
    on left: 43 44, on right: 29 44
RelOp (71)
    on left: 45 46 47 48 49 50, on right: 39
AggregateFunct (72)
    on left: 51 52 53 54 55 56 57 58 59 60, on right: 21 41
PathStepExpr (73)
    on left: 61 62 63 64, on right: 63 64 74
ChildAxis (74)
    on left: 65 66, on right: 61 63
DescendantAxis (75)
    on left: 67 68, on right: 62 64
NodeTest (76)
    on left: 69 70 71 72, on right: 61 62 63 64
QName (77)
    on left: 73, on right: 4 5 6 72
PathExpr (78)
    on left: 74, on right: 81 82
IfExpr (79)
    on left: 75, on right: 19
VarExpr (80)
    on left: 76 77 78 79, on right: 20 29 33 40 44 51 52 53 54 55 56
    57 58 59 60
VarRef (81)
    on left: 80, on right: 29 44 78 81
VarAxisExpr (82)
    on left: 81 82, on right: 79


state 0

    0 $accept: . start $end

    RELOP_LT  shift, and go to state 1

    $default  reduce using rule 2 (Query)

    start        go to state 2
    Query        go to state 3
    StartTag     go to state 4
    BachelorTag  go to state 5
    XMLExpr      go to state 6


state 1

    4 StartTag: RELOP_LT . QName RELOP_GT
    6 BachelorTag: RELOP_LT . QName GTSLASH

    QNAME  shift, and go to state 7

    QName  go to state 8


state 2

    0 $accept: start . $end

    $end  shift, and go to state 9


state 3

    1 start: Query .

    $default  reduce using rule 1 (start)


state 4

    7 XMLExpr: StartTag . NestedXMLExpr EndTag
    9        | StartTag . EndTag

    RELOP_LT        shift, and go to state 1
    LTSLASH         shift, and go to state 10
    CBOPEN          shift, and go to state 11
    ELEMENTCONTENT  shift, and go to state 12

    StartTag         go to state 4
    EndTag           go to state 13
    BachelorTag      go to state 5
    XMLExpr          go to state 14
    NestedXMLExpr    go to state 15
    ElementContents  go to state 16


state 5

    8 XMLExpr: BachelorTag .

    $default  reduce using rule 8 (XMLExpr)


state 6

    3 Query: XMLExpr .

    $default  reduce using rule 3 (Query)


state 7

   73 QName: QNAME .

    $default  reduce using rule 73 (QName)


state 8

    4 StartTag: RELOP_LT QName . RELOP_GT
    6 BachelorTag: RELOP_LT QName . GTSLASH

    RELOP_GT  shift, and go to state 17
    GTSLASH   shift, and go to state 18


state 9

    0 $accept: start $end .

    $default  accept


state 10

    5 EndTag: LTSLASH . QName RELOP_GT

    QNAME  shift, and go to state 7

    QName  go to state 19


state 11

   10 NestedXMLExpr: CBOPEN . QExpr CBCLOSE

    SLASH           shift, and go to state 20
    DSLASH          shift, and go to state 21
    FOR             shift, and go to state 22
    IF              shift, and go to state 23
    RELOP_LT        shift, and go to state 1
    VAR_SIGN        shift, and go to state 24
    CONSTSTRING     shift, and go to state 25
    CBOPEN          shift, and go to state 11
    BOPEN           shift, and go to state 26
    ELEMENTCONTENT  shift, and go to state 12
    SUM             shift, and go to state 27
    AVG             shift, and go to state 28
    MIN             shift, and go to state 29
    MAX             shift, and go to state 30
    COUNT           shift, and go to state 31
    STDDEV_SAMP     shift, and go to state 32
    STDDEV_POP      shift, and go to state 33
    VAR_SAMP        shift, and go to state 34
    VAR_POP         shift, and go to state 35
    LIST            shift, and go to state 36

    StartTag         go to state 4
    BachelorTag      go to state 5
    XMLExpr          go to state 14
    NestedXMLExpr    go to state 37
    ElementContents  go to state 16
    QExpr            go to state 38
    QExprSingle      go to state 39
    ConstString      go to state 40
    FWRExpr          go to state 41
    ReturnQExpr      go to state 42
    ForClause        go to state 43
    AggregateFunct   go to state 44
    PathStepExpr     go to state 45
    ChildAxis        go to state 46
    DescendantAxis   go to state 47
    PathExpr         go to state 48
    IfExpr           go to state 49
    VarExpr          go to state 50
    VarRef           go to state 51
    VarAxisExpr      go to state 52


state 12

   14 ElementContents: ELEMENTCONTENT .

    $default  reduce using rule 14 (ElementContents)


state 13

    9 XMLExpr: StartTag EndTag .

    $default  reduce using rule 9 (XMLExpr)


state 14

   12 NestedXMLExpr: XMLExpr .

    $default  reduce using rule 12 (NestedXMLExpr)


state 15

    7 XMLExpr: StartTag NestedXMLExpr . EndTag
   13 NestedXMLExpr: NestedXMLExpr . NestedXMLExpr

    RELOP_LT        shift, and go to state 1
    LTSLASH         shift, and go to state 10
    CBOPEN          shift, and go to state 11
    ELEMENTCONTENT  shift, and go to state 12

    StartTag         go to state 4
    EndTag           go to state 53
    BachelorTag      go to state 5
    XMLExpr          go to state 14
    NestedXMLExpr    go to state 54
    ElementContents  go to state 16


state 16

   11 NestedXMLExpr: ElementContents .

    $default  reduce using rule 11 (NestedXMLExpr)


state 17

    4 StartTag: RELOP_LT QName RELOP_GT .

    $default  reduce using rule 4 (StartTag)


state 18

    6 BachelorTag: RELOP_LT QName GTSLASH .

    $default  reduce using rule 6 (BachelorTag)


state 19

    5 EndTag: LTSLASH QName . RELOP_GT

    RELOP_GT  shift, and go to state 55


state 20

   65 ChildAxis: SLASH .
   66          | SLASH . CHILD
   68 DescendantAxis: SLASH . DESCENDANT
   77 VarExpr: SLASH .

    CHILD       shift, and go to state 56
    DESCENDANT  shift, and go to state 57

    NT_STAR   reduce using rule 65 (ChildAxis)
    QNAME     reduce using rule 65 (ChildAxis)
    XP_TEXT   reduce using rule 65 (ChildAxis)
    XP_NODE   reduce using rule 65 (ChildAxis)
    $default  reduce using rule 77 (VarExpr)


state 21

   67 DescendantAxis: DSLASH .

    $default  reduce using rule 67 (DescendantAxis)


state 22

   29 ForClause: FOR . VarRef IN VarExpr ExprAppendix

    VAR_SIGN  shift, and go to state 24

    VarRef  go to state 58


state 23

   75 IfExpr: IF . BOPEN Condition BCLOSE THEN ReturnQExpr ELSE ReturnQExpr

    BOPEN  shift, and go to state 59


state 24

   80 VarRef: VAR_SIGN . VARNAME

    VARNAME  shift, and go to state 60


state 25

   23 ConstString: CONSTSTRING .

    $default  reduce using rule 23 (ConstString)


state 26

   27 ReturnQExpr: BOPEN . QExpr BCLOSE
   28            | BOPEN . BCLOSE
   76 VarExpr: BOPEN . SLASH BCLOSE

    SLASH           shift, and go to state 61
    DSLASH          shift, and go to state 21
    FOR             shift, and go to state 22
    IF              shift, and go to state 23
    RELOP_LT        shift, and go to state 1
    VAR_SIGN        shift, and go to state 24
    CONSTSTRING     shift, and go to state 25
    CBOPEN          shift, and go to state 11
    BOPEN           shift, and go to state 26
    BCLOSE          shift, and go to state 62
    ELEMENTCONTENT  shift, and go to state 12
    SUM             shift, and go to state 27
    AVG             shift, and go to state 28
    MIN             shift, and go to state 29
    MAX             shift, and go to state 30
    COUNT           shift, and go to state 31
    STDDEV_SAMP     shift, and go to state 32
    STDDEV_POP      shift, and go to state 33
    VAR_SAMP        shift, and go to state 34
    VAR_POP         shift, and go to state 35
    LIST            shift, and go to state 36

    StartTag         go to state 4
    BachelorTag      go to state 5
    XMLExpr          go to state 14
    NestedXMLExpr    go to state 37
    ElementContents  go to state 16
    QExpr            go to state 63
    QExprSingle      go to state 39
    ConstString      go to state 40
    FWRExpr          go to state 41
    ReturnQExpr      go to state 42
    ForClause        go to state 43
    AggregateFunct   go to state 44
    PathStepExpr     go to state 45
    ChildAxis        go to state 46
    DescendantAxis   go to state 47
    PathExpr         go to state 48
    IfExpr           go to state 49
    VarExpr          go to state 50
    VarRef           go to state 51
    VarAxisExpr      go to state 52


state 27

   51 AggregateFunct: SUM . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 64


state 28

   52 AggregateFunct: AVG . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 65


state 29

   53 AggregateFunct: MIN . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 66


state 30

   54 AggregateFunct: MAX . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 67


state 31

   55 AggregateFunct: COUNT . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 68


state 32

   56 AggregateFunct: STDDEV_SAMP . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 69


state 33

   57 AggregateFunct: STDDEV_POP . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 70


state 34

   58 AggregateFunct: VAR_SAMP . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 71


state 35

   59 AggregateFunct: VAR_POP . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 72


state 36

   60 AggregateFunct: LIST . BOPEN VarExpr BCLOSE

    BOPEN  shift, and go to state 73


state 37

   13 NestedXMLExpr: NestedXMLExpr . NestedXMLExpr
   22 QExprSingle: NestedXMLExpr .

    RELOP_LT        shift, and go to state 1
    CBOPEN          shift, and go to state 11
    ELEMENTCONTENT  shift, and go to state 12
